Fixes body spacing issue

--- a/Projects/1/styles.css
+++ b/Projects/1/styles.css
@@ -88,7 +88,7 @@ body p {
 
 	body {
 		width: 100vw;
-		min-height: 100vh;
+		max-height: 100vh;
 	}
 
 	.player-tracker {
